@@ -2003,18 +2003,19 @@ of HTC.
 
 =item search_path_on_include
 
-In HTML::Template, if you have a file a/b/c/d/template.html and in
-that template you do an include of include.html, and include.html
-is in /a/b/include.html, HTML::Template will find it. As this
-wasn't so clear to me when reading the docs, I implemented
-this differently. You'd either have to include ../../include.html,
-or you should set search_path_on_include to 1 and include a/b/include.html.
+Default: 0
 
-If you really need this feature, write me. I'm still thinking of how
-I would implement this, and I don't like it much, because it
-seems to me like a global_vars for filenames, and I don't like
-global_vars =)
+In the HTML::Template documentation it says, if search_path_on_include
+is set to 1, the paths of the path option are searched, while the default
+behaviour is to look "only" in the current template directory.
 
+It's not clear if it still searches in the current directory if set
+to 1. I found out that it is not, so you cannot have both.
+
+In HTML::Template::Compiled, search_path_on_include can have three values:
+    0: search current template directory
+    1: search paths specified
+    2: search paths and current template directory.
 
 =item open_mode
 
@@ -2536,6 +2537,8 @@ Path to template files
 
 Search the list of paths specified with C<path> when including a template.
 Default is 0
+
+See L<"DIFFERENT FEATURES"> for the additional possible value 2.
 
 =item file_cache
 
