@@ -1,3 +1,3 @@
 Template t/templates/subdir/a/file1.html
-<tmpl_include file2.html>
+<tmpl_include a/file2.html>
 <tmpl_include dummy.tmpl>
