@@ -1,0 +1,1 @@
+<%include subdir/b.html %>
