@@ -1,0 +1,2 @@
+<%include subdir/b.html %>
+<%include path2_inc.html %>
