@@ -4,6 +4,8 @@ Revision history for Perl extension HTML::Template::Compiled.
 - Improved file cache performance
 - Bugfix: old bug with invalid tags in noparse, verbatim, comment
 - Remove old Storable workaround (0.94_002)
+- Change: Implemented searching the path and search_path_on_include like
+  in HTML::Template (finally) and add an additional value.
 
 0.97_001 Thu May 17 14:54:30 CEST 2012
 - fix HTML::Template::Compiled::Classic: allow every character in template
